<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/setting_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="15dp"
        android:background="@color/color_f0f0f0"
        android:visibility="gone">

        <Button
            android:id="@+id/set_remind"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:textSize="14sp"
            android:background="@drawable/btn_bg_selector"
            android:textColor="@color/btn_text_selector"
            android:text="@string/setting" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/tips"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/content_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:padding="15dp"
        android:background="@color/color_FCFCFC"
        android:text="@string/title_content_empty"/>

    <ListView
        android:id="@+id/list_item"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:background="@color/color_f0f0f0"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/edit_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint"
            android:textSize="14sp" />

        <Button
            android:id="@+id/add_btn"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:textSize="14sp"
            android:background="@drawable/btn_bg_selector"
            android:textColor="@color/btn_text_selector"
            android:text="@string/add" />
    </LinearLayout>

</LinearLayout>
